syntax = "proto3";

package discount;

service DiscountService {
  rpc GetDiscount(GetDiscountRequest) returns (Coupon) {}
  rpc CreateDiscount(CreateDiscountRequest) returns (Coupon);
  rpc UpdateDiscount(UpdateDiscountRequest) returns (Coupon);
  rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest { string productName = 1; }

message Coupon {
  string id = 1;
  string productName = 2;
  string description = 3;
  int64 amount = 4;
}

message CreateDiscountRequest {
  string productName = 2;
  string description = 3;
  int64 amount = 4;
}

message UpdateDiscountRequest {
  string id = 1;
  optional string productName = 2;
  optional string description = 3;
  optional int64 amount = 4;
}

message DeleteDiscountRequest { string productName = 1; }

message DeleteDiscountResponse { bool success = 1; }